--- a/themes/boot/assets/scss/global/hamburger.scss
+++ b/themes/boot/assets/scss/global/hamburger.scss
@@ -19,7 +19,9 @@ a {
         right: 0;
         z-index: 1;
       }
-      
+      .menu-wrap label {
+        display: none;
+      }
       .menu-wrap .toggler {
         position: absolute;
         top: 0;
@@ -104,7 +106,7 @@ a {
       
       .menu-wrap .toggler:checked ~ .menu > div > div {
         opacity: 1;
-        transition:  opacity 0.4s ease 0.4s;
+        transition:  opacity 0.2s ease 0.2s;
       }
       
       .menu-wrap .menu {
@@ -130,7 +132,7 @@ a {
         align-items: center;
         justify-content: center;
         transform: scale(0);
-        transition: all 0.4s ease;
+        transition: all 0s ease;
       }
       
       .menu-wrap .menu > div > div {
@@ -138,7 +140,7 @@ a {
         max-width: 90vw;
         max-height: 100vh;
         opacity: 0;
-        transition: opacity 0.4s ease;
+        transition: opacity 0.2s ease;
       }
       
       .menu-wrap .menu > div > div > ul > li {
@@ -151,5 +153,42 @@ a {
       .menu-wrap .menu > div > div > ul > li > a {
         color: inherit;
         text-decoration: none;
-        transition: color 0.4s ease;
+        transition: color 0.2s ease;
       }
+      #scroll {
+        z-index: 9999;
+        position:fixed;
+        right:50px;
+        bottom:50px;
+        cursor:pointer;
+        width:50px;
+        height:50px;
+        background-color:black;
+        text-indent:-9999px;
+        display:none;
+        -webkit-border-radius:60px;
+        -moz-border-radius:60px;
+        border-radius:60px
+    }
+    #scroll span {
+        position:absolute;
+        top:50%;
+        left:50%;
+        margin-left:-8px;
+        margin-top:-12px;
+        height:0;
+        width:0;
+        border:8px solid transparent;
+        border-bottom-color:#ffffff;
+    }
+    #scroll:hover {
+        background-color:grey;
+        opacity:1;filter:"alpha(opacity=100)";
+        -ms-filter:"alpha(opacity=100)";
+    }
+    @media (max-width: 768px) {
+        #scroll {
+            right:10px;
+            bottom:40px;
+        }
+    }
