--- a/themes/boot/layouts/partials/nav.html
+++ b/themes/boot/layouts/partials/nav.html
@@ -9,8 +9,8 @@
     </div>
                 <!-- Mobile Menu -->
 <div class="menu-wrap">
-  <label for="checkbox">Mobile Menu</label>
-  <input type="checkbox" class="toggler">
+  <label for="mobilemenu">Mobile Menu</label>
+  <input type="checkbox" id="mobilemenu" value="mobilemenu" class="toggler">
   <div class="hamburger"><div></div></div>
   <div class="menu">
     <div>
