--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -8,22 +8,22 @@
 @import 'bootstrap/grid';
 @import 'bootstrap/type';
 //@import 'bootstrap/tables';
-//@import "bootstrap/images";
+@import "bootstrap/images";
 //@import "bootstrap/code";
 //@import "bootstrap/forms";
 @import "bootstrap/buttons";
-//@import "bootstrap/transitions";
+@import "bootstrap/transitions";
 //@import "bootstrap/dropdown";
 //@import "bootstrap/button-group";
 //@import "bootstrap/input-group";
 //@import "bootstrap/custom-forms";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
-//@import "bootstrap/card";
+@import "bootstrap/card";
 //@import "bootstrap/breadcrumb";
 //@import "bootstrap/pagination";
 //@import "bootstrap/badge";
-//@import "bootstrap/jumbotron";
+@import "bootstrap/jumbotron";
 //@import "bootstrap/alert";
 //@import "bootstrap/progress";
 //@import "bootstrap/media";
