--- a/themes/boot/layouts/partials/footer.html
+++ b/themes/boot/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer p-2 bg-dark text-white">
     <div class="container">
         <div class="d-flex justify-content-center flex-wrap">
-            <div>Handcrafted with ❤️ by <a class="copyright" href="#">La Station Web</a>&nbsp</div>
+            <div>Handcrafted with ❤️ by <a class="copyright" href="#">Gold Standard Sites</a>&nbsp</div>
             <div>Copyright © {{ dateFormat "2006" now }}</div>
         </div>
     </div>
