--- a/themes/boot/layouts/partials/head.html
+++ b/themes/boot/layouts/partials/head.html
@@ -5,3 +5,4 @@
     {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" true) }}
     <link rel="stylesheet" href="{{ ($style).RelPermalink }}"/>
     <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
