--- a/themes/boot/assets/scss/_bootstrap-variables.scss
+++ b/themes/boot/assets/scss/_bootstrap-variables.scss
@@ -17,7 +17,7 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000000;
-$primary: orangered;
+$primary: #333;
 $secondary: #43454d;
 
 // Links
