Animation + Benefit Section

--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -51,7 +51,7 @@
   <div class="lead home__services--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
   <img src="{{ $.Site.BaseURL }}img/hero.jpg" alt="" class="benefits__img img-fluid shadow" data-aos="fade-up" data-aos-duration="800">
 </div>
-<section class="home__benefits-2 bg-white">
+<section class="home__benefits-2 mb-10 bg-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4 cols-sm-12">
