Font Awesome No Kit

--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -55,9 +55,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4 cols-sm-12">
-        <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="800">
+        <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fal fa-thumbs-up"></i></span>
+          <span style="font-size: 45px"><i class="far fa-star"></i></span>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #1</h3>
@@ -66,9 +66,9 @@
     </div>
   </div>
   <div class="col-lg-4 col-md-4 cols-sm-12">
-    <div class="icon__box d-flex flex-row" data-aos="fade-up" data-aos-duration="800">
+    <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fal fa-thumbs-up"></i></span>
+      <span style="font-size: 45px"><i class="far fa-star"></i></span>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #2</h3>
@@ -77,9 +77,9 @@
 </div>
 </div>
 <div class="col-lg-4 col-md-4 cols-sm-12">
-  <div class="icon__box d-flex flex-row" data-aos="fade-left" data-aos-duration="800">
+  <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fal fa-thumbs-up"></i></span>
+    <span style="font-size: 45px"><i class="far fa-star"></i></span>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #3</h3>
@@ -90,9 +90,9 @@
     </div>
     <div class="row mt-5">
       <div class="col-lg-4 col-md-4 cols-sm-12">
-        <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="800">
+        <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fal fa-thumbs-up"></i></span>
+          <span style="font-size: 45px"><i class="far fa-star"></i></span>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #4</h3>
@@ -101,9 +101,9 @@
     </div>
   </div>
   <div class="col-lg-4 col-md-4 cols-sm-12">
-    <div class="icon__box d-flex flex-row" data-aos="fade-up" data-aos-duration="800">
+    <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fal fa-thumbs-up"></i></span>
+      <span style="font-size: 45px"><i class="far fa-star"></i></span>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #5</h3>
@@ -112,9 +112,9 @@
 </div>
 </div>
 <div class="col-lg-4 col-md-4 cols-sm-12">
-  <div class="icon__box d-flex flex-row" data-aos="fade-left" data-aos-duration="800">
+  <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fal fa-thumbs-up"></i></span>
+    <span style="font-size: 45px"><i class="far fa-star"></i></span>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #6</h3>
