--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -36,6 +36,10 @@
 //@import "bootstrap/print";
 @import 'bootstrap/utilities';
 
+//Font Awesome
+@import 'font-awesome/fontawesome';
+@import 'font-awesome/regular';
+
 // Global
 @import 'global/main';
 @import 'global/hamburger';
