Prune Font-awesome

--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -38,7 +38,7 @@
 
 //Font Awesome
 @import 'font-awesome/fontawesome';
-@import 'font-awesome/regular';
+@import 'font-awesome/light';
 
 // Global
 @import 'global/main';
