--- a/themes/boot/layouts/partials/footer.html
+++ b/themes/boot/layouts/partials/footer.html
@@ -10,6 +10,7 @@
     {{ $scripts := resources.Get "js/script.js" }}
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+    <script src="https://kit.fontawesome.com/53d8c64089.js" crossorigin="anonymous" async></script>
     <script type="text/javascript" src="{{ ($scripts | minify | fingerprint).RelPermalink }}" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous" defer></script>
 </footer>
