--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -7,33 +7,33 @@
 @import 'bootstrap/reboot';
 @import 'bootstrap/grid';
 @import 'bootstrap/type';
-//@import 'bootstrap/tables';
+@import 'bootstrap/tables';
 @import "bootstrap/images";
-//@import "bootstrap/code";
-//@import "bootstrap/forms";
+@import "bootstrap/code";
+@import "bootstrap/forms";
 @import "bootstrap/buttons";
 @import "bootstrap/transitions";
-//@import "bootstrap/dropdown";
-//@import "bootstrap/button-group";
-//@import "bootstrap/input-group";
-//@import "bootstrap/custom-forms";
+@import "bootstrap/dropdown";
+@import "bootstrap/button-group";
+@import "bootstrap/input-group";
+@import "bootstrap/custom-forms";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
 @import "bootstrap/card";
-//@import "bootstrap/breadcrumb";
-//@import "bootstrap/pagination";
-//@import "bootstrap/badge";
+@import "bootstrap/breadcrumb";
+@import "bootstrap/pagination";
+@import "bootstrap/badge";
 @import "bootstrap/jumbotron";
-//@import "bootstrap/alert";
-//@import "bootstrap/progress";
-//@import "bootstrap/media";
-//@import "bootstrap/list-group";
-//@import "bootstrap/close";
-//@import "bootstrap/modal";
-//@import "bootstrap/tooltip";
-//@import "bootstrap/popover";
-//@import "bootstrap/carousel";
-//@import "bootstrap/print";
+@import "bootstrap/alert";
+@import "bootstrap/progress";
+@import "bootstrap/media";
+@import "bootstrap/list-group";
+@import "bootstrap/close";
+@import "bootstrap/modal";
+@import "bootstrap/tooltip";
+@import "bootstrap/popover";
+@import "bootstrap/carousel";
+@import "bootstrap/print";
 @import 'bootstrap/utilities';
 
 // Global
