--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -57,7 +57,7 @@
       <div class="col-lg-4 col-md-4 cols-sm-12">
         <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fal fa-star"></i></span>
+          <span style="font-size: 45px"><i class="fad fa-star"></i></span>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #1</h3>
@@ -68,7 +68,7 @@
   <div class="col-lg-4 col-md-4 cols-sm-12">
     <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fal fa-star"></i></span>
+      <span style="font-size: 45px"><i class="fad fa-star"></i></span>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #2</h3>
@@ -79,7 +79,7 @@
 <div class="col-lg-4 col-md-4 cols-sm-12">
   <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fal fa-star"></i></span>
+    <span style="font-size: 45px"><i class="fad fa-star"></i></span>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #3</h3>
@@ -92,7 +92,7 @@
       <div class="col-lg-4 col-md-4 cols-sm-12">
         <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fal fa-star"></i></span>
+          <span style="font-size: 45px"><i class="fad fa-star"></i></span>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #4</h3>
@@ -103,7 +103,7 @@
   <div class="col-lg-4 col-md-4 cols-sm-12">
     <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fal fa-star"></i></span>
+      <span style="font-size: 45px"><i class="fad fa-star"></i></span>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #5</h3>
@@ -114,7 +114,7 @@
 <div class="col-lg-4 col-md-4 cols-sm-12">
   <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fal fa-star"></i></span>
+    <span style="font-size: 45px"><i class="fad fa-star"></i></span>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #6</h3>
@@ -124,5 +124,33 @@
 </div>
     </div>
 </div>
+</section>
+<section class="container">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://via.placeholder.com/1200x600" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://via.placeholder.com/1200x600" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://via.placeholder.com/1200x600" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </section>
 {{ end }}
