--- a/themes/boot/assets/scss/global/main.scss
+++ b/themes/boot/assets/scss/global/main.scss
@@ -1,5 +1,3 @@
-$brand-color: orangered;
-
 .copyright {
     color: white;
 }
@@ -9,66 +7,15 @@ $brand-color: orangered;
 .nav-link:hover {
     color: $brand-color;
 }
-/* Homepage Header Section */
-.header {
-    background-image: url(/img/hero.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+.logo {
+    max-width: 200px;
 }
-.overlay {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+.nav-logo {
+    max-width: 150px;
 }
-.hero-content {
-    position: absolute;
-    top: 40%;
-
-    p {
-        color: white;
-    }
-    
-    & .welcome-to {
-        text-transform: uppercase;
-        color: white;
-    }
-
-    & h1 {
-        color: $brand-color;
-    }
-
-    & button {
-        border-width: 2px;
-        font-weight: bold;
-    }
+.brand-color {
+    color: $brand-color !important;
 }
-/* Homepage About Section */
-.home__about {
-    h2{
-        color: $brand-color;
-    }
-    .about-img {
-        border-radius: 100%;
-    }
-    &--desc {
-        padding-left: 2rem;
-    }
-    .icon {
-        color: $brand-color !important;
-    }
-}
-/* Homepage Services Section */
-.home__services {
-    &--textbox {
-        padding: 10px 20px 30px 20px;
-    }
-}
-/* Homepage Benefit Section */
-.home__benefits-2 {
-    margin-top: -390px;
-    padding-top: 450px;
+.uppercase {
+    text-transform: uppercase;
 }
