--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -39,4 +39,7 @@
 // Global
 @import 'global/main';
 @import 'global/hamburger';
-@import 'global/preloader.scss'
+@import 'global/preloader.scss';
+
+// Layout
+@import 'layout/home';
