--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 </header>
-<section class="home__services my-10">
+<section class="home__services py-8">
   <div class="container">
   <h2 class="home__services--heading display-4 text-center" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
   <div class="lead home__services--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
@@ -45,19 +45,19 @@
     </div>
   </div>
 </section>
-<section class="home__benefits pt-10 bg-light">
+<section class="home__benefits pt-8 bg-light">
   <div class="container">
-  <h2 class="home__services--heading display-4 text-center" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
-  <div class="lead home__services--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
+  <h2 class="home__benefits--heading display-4 text-center" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
+  <div class="lead home__benefits--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
   <img src="{{ $.Site.BaseURL }}img/hero.jpg" alt="" class="benefits__img img-fluid shadow" data-aos="fade-up" data-aos-duration="800">
 </div>
-<section class="home__benefits-2 mb-10 bg-white">
+<section class="home__benefits-2 bg-white pb-5">
   <div class="container">
-    <div class="row">
+    <div class="row my-3 row-1">
       <div class="col-lg-4 col-md-4 cols-sm-12">
         <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fad fa-star"></i></span>
+          <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #1</h3>
@@ -68,7 +68,7 @@
   <div class="col-lg-4 col-md-4 cols-sm-12">
     <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fad fa-star"></i></span>
+      <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #2</h3>
@@ -79,7 +79,7 @@
 <div class="col-lg-4 col-md-4 cols-sm-12">
   <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fad fa-star"></i></span>
+    <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #3</h3>
@@ -88,11 +88,11 @@
 </div>
 </div>
     </div>
-    <div class="row mt-5">
+    <div class="row my-3 row-2">
       <div class="col-lg-4 col-md-4 cols-sm-12">
         <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fad fa-star"></i></span>
+          <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #4</h3>
@@ -103,7 +103,7 @@
   <div class="col-lg-4 col-md-4 cols-sm-12">
     <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fad fa-star"></i></span>
+      <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #5</h3>
@@ -114,7 +114,7 @@
 <div class="col-lg-4 col-md-4 cols-sm-12">
   <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fad fa-star"></i></span>
+    <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #6</h3>
@@ -125,32 +125,116 @@
     </div>
 </div>
 </section>
-<section class="container">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://via.placeholder.com/1200x600" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://via.placeholder.com/1200x600" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://via.placeholder.com/1200x600" class="d-block w-100" alt="...">
+<section class="container py-8">
+      <h2 class="text-center pb-3">Testimonials</h2>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active text-center">
+            <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail about-img m-auto mb-2">
+            <h3 class="py-2">Lorem Ipsum</h3>
+            <p class="text-center w-75 m-auto">Convallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis. Euismod nisi porta lorem mollis aliquam ut porttitor. Consectetur a erat nam at lectus.</p>
+          </div>
+          <div class="carousel-item text-center">
+            <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail about-img m-auto">
+            <h3 class="py-2">Lorem Ipsum</h3>
+            <p class="text-center w-75 m-auto">Convallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis. Euismod nisi porta lorem mollis aliquam ut porttitor. Consectetur a erat nam at lectus.</p>
+          </div>
+          <div class="carousel-item text-center">
+            <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail about-img m-auto">
+            <h3 class="py-2">Lorem Ipsum</h3>
+            <p class="text-center w-75 m-auto">Convallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis. Euismod nisi porta lorem mollis aliquam ut porttitor. Consectetur a erat nam at lectus.</p>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+</section>
+<section class="home__contact container py-8" data-aos="fade-up" data-aos-duration="800">
+  <div class="row">
+    <div class="col-lg-4 col-md-4 col-sm-12 home__contact--info">
+      <img src="{{ $.Site.BaseURL }}img/logo.png" alt="" class="logo">
+      <h2>{{ $.Site.Params.businessname }}</h2>
+      <address>
+        {{ $.Site.Params.address }}<br>
+        {{ $.Site.Params.city }}, {{ $.Site.Params.region }}<br>
+        {{ $.Site.Params.postalcode }}<br>
+        {{ $.Site.Params.country }}<br>
+        </address>
+        <i class="fas fa-phone-square-alt"></i> <a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a><br>
+        <i class="far fa-envelope"></i> <a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a><br>
+
+    </div>
+    <div class="col-lg-8 col-md-8 col-sm-12">
+      <div class="shadow p-3">
+        <h2>Contact Us</h2>
+        <form id="contact-form" method="post" action="" role="form">
+
+          <div class="messages"></div>
+  
+          <div class="controls">
+  
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="form_name">First name *</label>
+                  <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                  <div class="help-block with-errors"></div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="form_lastname">Last name *</label>
+                  <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                  <div class="help-block with-errors"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="form_email">Email *</label>
+                  <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                  <div class="help-block with-errors"></div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="form_phone">Phone</label>
+                  <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                  <div class="help-block with-errors"></div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label for="form_message">Message *</label>
+                  <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required data-error="Please,leave us a message."></textarea>
+                  <div class="help-block with-errors"></div>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <input type="submit" class="btn btn-success btn-send" value="Send message">
+              </div>
+            </div>
+           
+          </div>
+  
+          </form>
+    </div>
   </div>
+    </div>
 </section>
 {{ end }}
