--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="hero-content">
         <div class="welcome-to font-weight-bold">Welcome to {{ $.Site.Params.businessname }}</div>
-        <h1 class="display-3">{{.Params.h1}}</h1>
+        <h1 class="display-3 uppercase">{{.Params.h1}}</h1>
         <p class="py-1 lead">{{.Params.lead}}</p>
         <button class="btn btn-outline-light btn-lg">See More</button>
       </div>
@@ -13,7 +13,7 @@
 </header>
 <section class="home__services py-8">
   <div class="container">
-  <h2 class="home__services--heading display-4 text-center" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
+  <h2 class="home__services--heading display-4 text-center uppercase" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
   <div class="lead home__services--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
   <div class="row">
     <div class="col-lg-4 col-md-4 cols-sm-12 text-center my-3">
@@ -47,7 +47,7 @@
 </section>
 <section class="home__benefits pt-8 bg-light">
   <div class="container">
-  <h2 class="home__benefits--heading display-4 text-center" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
+  <h2 class="home__benefits--heading display-4 text-center uppercase" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
   <div class="lead home__benefits--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
   <img src="{{ $.Site.BaseURL }}img/hero.jpg" alt="" class="benefits__img img-fluid shadow" data-aos="fade-up" data-aos-duration="800">
 </div>
@@ -126,7 +126,7 @@
 </div>
 </section>
 <section class="container py-8">
-      <h2 class="text-center pb-3">Testimonials</h2>
+      <h2 class="text-center pb-3 uppercase">Testimonials</h2>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -165,7 +165,7 @@
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12 home__contact--info">
       <img src="{{ $.Site.BaseURL }}img/logo.png" alt="" class="logo">
-      <h2>{{ $.Site.Params.businessname }}</h2>
+      <h2 class="uppercase">{{ $.Site.Params.businessname }}</h2>
       <address>
         {{ $.Site.Params.address }}<br>
         {{ $.Site.Params.city }}, {{ $.Site.Params.region }}<br>
@@ -178,7 +178,7 @@
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12">
       <div class="shadow p-3">
-        <h2>Contact Us</h2>
+        <h2 class="uppercase">Contact Us</h2>
         <form id="contact-form" method="post" action="" role="form">
 
           <div class="messages"></div>
