--- a/themes/boot/assets/scss/global/hamburger.scss
+++ b/themes/boot/assets/scss/global/hamburger.scss
@@ -160,7 +160,7 @@ a {
         cursor:pointer;
         width:50px;
         height:50px;
-        background-color:black;
+        background-color:$brand-color;
         text-indent:-9999px;
         display:none;
         -webkit-border-radius:60px;
