--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -172,8 +172,8 @@
         {{ $.Site.Params.postalcode }}<br>
         {{ $.Site.Params.country }}<br>
         </address>
-        <i class="fas fa-phone-square-alt"></i> <a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a><br>
-        <i class="far fa-envelope"></i> <a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a><br>
+        <i class="fal fa-phone-square-alt"></i> <a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a><br>
+        <i class="fal fa-envelope"></i> <a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a><br>
 
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12">
