--- a/themes/boot/assets/scss/layout/home.scss
+++ b/themes/boot/assets/scss/layout/home.scss
@@ -92,6 +92,7 @@
 }
 /* Homepage Services Section */
 .home__services {
+    background-color: white;
     &--textbox {
         padding: 10px 20px 30px 20px;
     }
