--- a/themes/boot/assets/scss/global/hamburger.scss
+++ b/themes/boot/assets/scss/global/hamburger.scss
@@ -32,7 +32,7 @@ a {
       
       .menu-wrap .hamburger {
         position: absolute;
-        top: 0;
+        top: 10px;
         right: 0;
         z-index: 1;
         width: 55px;
@@ -62,7 +62,7 @@ a {
       .menu-wrap .hamburger > div::after {
         content: '';
         position: absolute;
-        z-index: 1;
+        z-index: 1000;
         top: -10px;
         width: 100%;
         height: 2px;
