About page + partial contact form

--- a/themes/boot/layouts/_default/services.html
+++ b/themes/boot/layouts/_default/services.html
@@ -1,9 +1,11 @@
 {{ define "main" }}
-<div class="jumbotron">
-  <div class="container">
-    <h1 class="display-4">{{.Title}}</h1>
-    <p class="lead">Here's some description stuff</p>
-    <p>There's also other things that are super nice</p>
+<header class="subheader">
+  <div class="overlay">
+    <div class="container">
+      <div class="sub-content">
+        <h1 class="display-4 uppercase">{{.Title}}</h1>
+      </div>
+    </div>
   </div>
-</div>
+</header>
 {{ end }}
