--- a/themes/boot/assets/scss/global/preloader.scss
+++ b/themes/boot/assets/scss/global/preloader.scss
@@ -4,6 +4,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: white;
+    background-color: rgba(255,255,255,0.9);
     z-index: 999999;
 }
