--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -45,3 +45,5 @@
 @import 'layout/home';
 @import 'layout/about';
 @import 'layout/contactform';
+@import 'layout/services';
+@import 'layout/gallery';
