--- a/themes/boot/layouts/partials/head.html
+++ b/themes/boot/layouts/partials/head.html
@@ -6,3 +6,4 @@
     <link rel="stylesheet" href="{{ ($style).RelPermalink }}"/>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
