--- a/themes/boot/assets/scss/layout/home.scss
+++ b/themes/boot/assets/scss/layout/home.scss
@@ -33,11 +33,13 @@
     }
 }
 /* Homepage Header Section */
+
 .header {
     background-image: url(/img/hero.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    height: 80vh;
 }
 
 .hero-content {
