No Lightbox across website

--- a/themes/boot/layouts/_default/gallery.html
+++ b/themes/boot/layouts/_default/gallery.html
@@ -1,5 +1,6 @@
 
 {{ define "main" }}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
 <header class="subheader">
     <div class="overlay">
       <div class="container">
@@ -39,4 +40,5 @@
       </div>
 </section>
 {{- partial "contactform.html" . -}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" defer></script>
 {{ end }}
