--- a/themes/boot/assets/scss/bootstrap/_variables.scss
+++ b/themes/boot/assets/scss/bootstrap/_variables.scss
@@ -4,7 +4,7 @@
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
 // Color system
-$brand-color:  orangered !default;
+$brand-color:  #3288db !default;
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
