--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -47,8 +47,8 @@
 </section>
 <section class="home__benefits pt-8 bg-light">
   <div class="container">
-  <h2 class="home__benefits--heading display-4 text-center uppercase" data-aos="fade-up" data-aos-duration="800">{{.Params.h2}}</h2>
-  <div class="lead home__benefits--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead2}}</div>
+  <h2 class="home__benefits--heading display-4 text-center uppercase" data-aos="fade-up" data-aos-duration="800">{{.Params.h3}}</h2>
+  <div class="lead home__benefits--subheading text-center pb-5" data-aos="fade-up" data-aos-duration="800">{{.Params.subhead3}}</div>
   <img src="{{ $.Site.BaseURL }}img/hero.jpg" alt="" class="benefits__img img-fluid shadow" data-aos="fade-up" data-aos-duration="800">
 </div>
 <section class="home__benefits-2 bg-white pb-5">
@@ -159,6 +159,11 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+    </div>
+  </section>
+  <section class="container-fluid bg-dark py-8">
+    <div class="container">
+      <h3 class="display-4 text-white text-center">Impactful Leading Headline Here</h3>
     </div>
   </section>
 {{ end }}
