--- a/themes/boot/layouts/_default/about.html
+++ b/themes/boot/layouts/_default/about.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 </section>
-<section class="about__skills mt-0">
+<section class="about__skills mt-0 pb-8">
   <div class="container">
   <div class="row">
     <div class="col-lg-4 col-md-4 cols-sm-12 text-center my-3">
