--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -3,10 +3,10 @@
   <div class="overlay">
     <div class="container">
       <div class="hero-content">
-        <div class="welcome-to font-weight-bold">Welcome to {{ $.Site.Params.businessname }}</div>
+        <div class="welcome-to font-weight-bold">Welcome to your future</div>
         <h1 class="display-3 uppercase">{{.Params.h1}}</h1>
         <p class="lead">{{.Params.lead}}</p>
-        <button class="btn btn-outline-light btn-lg">See More</button>
+        <a href="/services"><button class="btn btn-outline-light btn-lg">Our Services</button></a>
       </div>
     </div>
   </div>
@@ -159,11 +159,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
-  </section>
-  <section class="container-fluid bg-dark py-8">
-    <div class="container">
-      <h3 class="display-4 text-white text-center">Impactful Leading Headline Here</h3>
     </div>
   </section>
 {{ end }}
