--- a/themes/boot/layouts/partials/nav.html
+++ b/themes/boot/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar bg-white fixed-top navbar-expand-md navbar-light shadow">
-    <div class="container">
-    <a class="navbar-brand" href="/">Framework</a>
+    <div class="container py-1">
+    <a class="navbar-brand" href="/">Framework One</a>
         <div class="desktopmenu d-flex align-items-end">
             {{ range .Site.Menus.mainmenu }}
             <a class="nav-item nav-link uppercase" href="{{ .URL }}">{{ .Name }}</a>
