Framework Contact Form

--- a/themes/boot/assets/scss/style.scss
+++ b/themes/boot/assets/scss/style.scss
@@ -44,6 +44,9 @@
 // Layout
 @import 'layout/home';
 @import 'layout/about';
-@import 'layout/contactform';
+@import 'layout/contact';
 @import 'layout/services';
 @import 'layout/gallery';
+
+// Partial
+@import 'partial/faq';
