--- a/themes/boot/layouts/partials/contactform.html
+++ b/themes/boot/layouts/partials/contactform.html
@@ -1,21 +1,8 @@
 <section class="contact__form container py-8">
     <div class="row" data-aos="fade-up" data-aos-duration="800">
-      <div class="col-lg-4 col-md-4 col-sm-12 contact__form--info text-left">
-        <img src="{{ $.Site.BaseURL }}img/logo.png" alt="{{ $.Site.Title }}" class="logo">
-        <h2 class="uppercase">{{ $.Site.Params.businessname }}</h2>
-        <address>
-          {{ $.Site.Params.address }}<br>
-          {{ $.Site.Params.city }}, {{ $.Site.Params.region }}<br>
-          {{ $.Site.Params.postalcode }}<br>
-          {{ $.Site.Params.country }}<br>
-          </address>
-          <i class="fal fa-phone-square-alt brand-color"></i> <a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a><br>
-          <i class="fal fa-envelope brand-color"></i> <a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a><br>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.7149064304866!2d-125.55151709180893!3d48.94012789331871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548973bcf7c3d915%3A0xb1bbf180565641b3!2s1536%20Peninsula%20Rd%2C%20Ucluelet%2C%20BC%20V0R%203A0!5e0!3m2!1sfr!2sca!4v1585942900748!5m2!1sfr!2sca" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      </div>
-      <div class="col-lg-8 col-md-8 col-sm-12">
-        <div class="shadow p-3">
-          <h2 class="uppercase">Contact Us</h2>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="pr-3 contact__form--info text-left">
+          <h2 class="uppercase pb-2">Drop us a line</h2>
           <form id="contact-form" method="POST" action="https://usebasin.com/f/e81dd2c10ed2" role="form">
   
             <div class="messages"></div>
@@ -71,6 +58,24 @@
     
             </form>
       </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 contact__form--info text-left">
+      <h2 class="uppercase pb-2">Contact Details</h2>
+      <div class="contact__detail">
+        <i class="fas fa-map-marker brand-color pr-1"></i> {{ $.Site.Params.address }}, {{ $.Site.Params.city }}, {{ $.Site.Params.region }}, {{ $.Site.Params.postalcode }}
+      </div>
+        <div class="contact__detail">
+          <i class="fas fa-phone brand-color pr-1"> </i><a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a>
+        </div>
+        <div class="contact__detail">
+          <i class="fas fa-envelope brand-color pr-1"></i><a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a>
+      </div>
+      <div class="contact__detail">
+        <span style="font-size: 28px;"><i class="fab fa-facebook-square brand-color pr-2"></i><i class="fab fa-instagram brand-color"></i></span>
+      </div>
+      <div class="map-wrapper">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.6392906210613!2d-122.08624618435616!3d37.421999879825236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba02425dad8f%3A0x6c296c66619367e0!2sGoogleplex!5e0!3m2!1sen!2sca!4v1585959269273!5m2!1sen!2sca" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
     </div>
       </div>
   </section>  
