--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -57,7 +57,9 @@
       <div class="col-lg-4 col-md-4 cols-sm-12">
         <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
+          <svg class="fill-brand">
+            <use xlink:href="{{ $.Site.BaseURL }}img/light.svg#star"></use>
+          </svg>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #1</h3>
@@ -68,7 +70,9 @@
   <div class="col-lg-4 col-md-4 cols-sm-12">
     <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
+      <svg class="fill-brand">
+        <use xlink:href="{{ $.Site.BaseURL }}img/light.svg#star"></use>
+      </svg>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #2</h3>
@@ -79,7 +83,9 @@
 <div class="col-lg-4 col-md-4 cols-sm-12">
   <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
+    <svg class="fill-brand">
+      <use xlink:href="{{ $.Site.BaseURL }}img/light.svg#star"></use>
+    </svg>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #3</h3>
@@ -92,7 +98,9 @@
       <div class="col-lg-4 col-md-4 cols-sm-12">
         <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
         <div class="icon">
-          <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
+          <svg class="fill-brand">
+            <use xlink:href="{{ $.Site.BaseURL }}img/light.svg#star"></use>
+          </svg>
         </div>
           <div class="icon__box--text pl-3">
           <h3>Benefit #4</h3>
@@ -103,7 +111,9 @@
   <div class="col-lg-4 col-md-4 cols-sm-12">
     <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
     <div class="icon">
-      <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
+      <svg class="fill-brand">
+        <use xlink:href="{{ $.Site.BaseURL }}img/light.svg#star"></use>
+      </svg>
     </div>
       <div class="icon__box--text pl-3">
       <h3>Benefit #5</h3>
@@ -114,7 +124,9 @@
 <div class="col-lg-4 col-md-4 cols-sm-12">
   <div class="icon__box d-flex flex-row" data-aos="fade-right" data-aos-duration="400">
   <div class="icon">
-    <span style="font-size: 45px"><i class="fal fa-star brand-color"></i></span>
+    <svg class="fill-brand">
+      <use xlink:href="{{ $.Site.BaseURL }}img/light.svg#star"></use>
+    </svg>
   </div>
     <div class="icon__box--text pl-3">
     <h3>Benefit #6</h3>
