--- a/themes/boot/layouts/partials/contactform.html
+++ b/themes/boot/layouts/partials/contactform.html
@@ -62,16 +62,30 @@
     <div class="col-lg-6 col-md-6 col-sm-12 contact__form--info text-left">
       <h2 class="uppercase pb-2">Contact Details</h2>
       <div class="contact__detail">
-        <i class="fas fa-map-marker brand-color pr-1"></i> {{ $.Site.Params.address }}, {{ $.Site.Params.city }}, {{ $.Site.Params.region }}, {{ $.Site.Params.postalcode }}
+        <svg class="fill-brand pr-1">
+          <use xlink:href="{{ $.Site.BaseURL }}img/solid.svg#map-marker"></use>
+        </svg>
+         {{ $.Site.Params.address }}, {{ $.Site.Params.city }}, {{ $.Site.Params.region }}, {{ $.Site.Params.postalcode }}
       </div>
         <div class="contact__detail">
-          <i class="fas fa-phone brand-color pr-1"> </i><a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a>
+          <svg class="fill-brand pr-1">
+            <use xlink:href="{{ $.Site.BaseURL }}img/solid.svg#phone"></use>
+          </svg>
+          <a href="tel:{{ $.Site.Params.phone }}">{{ $.Site.Params.phone }}</a>
         </div>
         <div class="contact__detail">
-          <i class="fas fa-envelope brand-color pr-1"></i><a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a>
+          <svg class="fill-brand pr-1">
+            <use xlink:href="{{ $.Site.BaseURL }}img/solid.svg#envelope"></use>
+          </svg>
+          <a href="mailto:{{ $.Site.Params.email }}">{{ $.Site.Params.email }}</a>
       </div>
       <div class="contact__detail">
-        <span style="font-size: 28px;"><i class="fab fa-facebook-square brand-color pr-2"></i><i class="fab fa-instagram brand-color"></i></span>
+        <svg class="fill-brand">
+          <use xlink:href="{{ $.Site.BaseURL }}img/brands.svg#facebook-square"></use>
+        </svg>
+        <svg class="fill-brand">
+          <use xlink:href="{{ $.Site.BaseURL }}img/brands.svg#instagram"></use>
+        </svg>
       </div>
       <div class="map-wrapper">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.6392906210613!2d-122.08624618435616!3d37.421999879825236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba02425dad8f%3A0x6c296c66619367e0!2sGoogleplex!5e0!3m2!1sen!2sca!4v1585959269273!5m2!1sen!2sca" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
