--- a/themes/boot/layouts/partials/footer.html
+++ b/themes/boot/layouts/partials/footer.html
@@ -10,7 +10,12 @@
                 <div class="footer__box">
                 <h3 class="uppercase pb-1">{{ $.Site.Params.businessname }}</h3>
                 <p>onvallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis.</p>
-                <span style="font-size: 28px;"><i class="fab fa-facebook-square brand-color pr-2"></i><i class="fab fa-instagram brand-color"></i></span>
+                <svg class="fill-brand">
+                    <use xlink:href="{{ $.Site.BaseURL }}img/brands.svg#facebook-square"></use>
+                  </svg>
+                  <svg class="fill-brand">
+                    <use xlink:href="{{ $.Site.BaseURL }}img/brands.svg#instagram"></use>
+                  </svg>
             </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 pb-1">
@@ -51,7 +56,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="{{ $.Site.BaseURL }}js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous" async></script>
-    <script src="https://kit.fontawesome.com/53d8c64089.js" crossorigin="anonymous" defer></script>
+    
     {{ $scripts := resources.Get "js/bootstrap.bundle.min.js" }}
     <script type="text/javascript" src="{{ ($scripts | minify | fingerprint).RelPermalink }}" async></script>
 </footer>
