--- a/themes/boot/layouts/index.html
+++ b/themes/boot/layouts/index.html
@@ -141,22 +141,22 @@
       <h2 class="text-center pb-3 uppercase">Testimonials</h2>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" class="brand-color" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active text-center">
+          <div class="carousel-item active text-center py-8">
             <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail about-img m-auto mb-2">
             <h3 class="py-2">Lorem Ipsum</h3>
             <p class="text-center w-75 m-auto">Convallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis. Euismod nisi porta lorem mollis aliquam ut porttitor. Consectetur a erat nam at lectus.</p>
           </div>
-          <div class="carousel-item text-center">
+          <div class="carousel-item text-center py-8">
             <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail about-img m-auto">
             <h3 class="py-2">Lorem Ipsum</h3>
             <p class="text-center w-75 m-auto">Convallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis. Euismod nisi porta lorem mollis aliquam ut porttitor. Consectetur a erat nam at lectus.</p>
           </div>
-          <div class="carousel-item text-center">
+          <div class="carousel-item text-center py-8">
             <img src="{{ $.Site.BaseURL }}img/about-img.jpg" alt="Image of {{ $.Site.Title }}" class="img-fluid img-thumbnail about-img m-auto">
             <h3 class="py-2">Lorem Ipsum</h3>
             <p class="text-center w-75 m-auto">Convallis posuere morbi leo urna molestie at elementum. Turpis cursus in hac habitasse platea dictumst quisque. Nulla pellentesque dignissim enim sit amet venenatis. Euismod nisi porta lorem mollis aliquam ut porttitor. Consectetur a erat nam at lectus.</p>
