bigger phone & email

--- a/themes/boot/layouts/partials/footer.html
+++ b/themes/boot/layouts/partials/footer.html
@@ -27,9 +27,9 @@
                     {{ $.Site.Params.postalcode }},{{ $.Site.Params.country }}<br>
                     </address>
                     <strong>Phone:</strong>
-                    <a href="tel:{{ $.Site.Params.phone }}" class="brand-color">{{ $.Site.Params.phone }}</a><br>
+                    <a href="tel:{{ $.Site.Params.phone }}" class="brand-color"><h5>{{ $.Site.Params.phone }}</h5></a>
                     <strong>Email:</strong>
-                    <a href="mailto:{{ $.Site.Params.email }}" class="brand-color">{{ $.Site.Params.email }}</a><br>
+                    <a href="mailto:{{ $.Site.Params.email }}" class="brand-color"><h5>{{ $.Site.Params.email }}</h5></a>
             </div>
         </div>
             <div class="col-lg-4 col-md-4 col-sm 12 pb-1">
